--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 newsconcierge.cors.allowedorigins=http://localhost:4200
-newsconcierge.cookie.domain=localhost
 server.port=8081
+newsconcierge.cookie.ttl=10
